--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Solutions for the Project Euler in JS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/anithashok1910/project-euler-solutions/issues"
   },
-  "homepage": "https://github.com/anithashok1910/project-euler-solutions#readme"
+  "homepage": "https://github.com/anithashok1910/project-euler-solutions#readme",
+  "devDependencies": {
+    "jest": "^23.6.0"
+  }
 }
